# poly_opt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/poly_traj_generation/: convolution.h  extremum.h  io.h  motion_defines.h  poly_opt_linear.h  poly_opt_nonlinear.h  polynomial.h  rpoly_ak1.h  segment.h  timing.h  trajectory.h  vertex.h
include/poly_traj_generation/impl/: poly_opt_linear_impl.h  poly_opt_nonlinear_impl.h
src/: io.cpp  motion_defines.cpp  polynomial.cpp  rpoly_ak1.cpp  segment.cpp  timing.cpp  trajectory.cpp  vertex.cpp
test/: b11_car_path.cpp  test_linear_opt.cpp  test_nonlinear_opt.cpp
